# pokemon

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py  endpoints.py  helper.py  schemas.py
app/api/endpoints/: __init__.py  cards_api.py  editions_api.py  pokedex_api.py
app/core/: app_config.py  db.py
app/domain/models/: __init__.py  entities.py
app/domain/schemas/: __init__.py  card_schema.py  edition_schema.py  pokedex_scbema.py
app/libs/: __init__.py  ligapokemon.py
app/repository/: __init__.py  base.py  exceptions.py  repositories.py  uow.py
app/service/: __init__.py  base.py  card_service.py  edition_service.py  exceptions.py  pokedex_service.py
