[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.127.0",
    "httpx[http2]>=0.28.1",
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "playwright>=1.57.0",
    "pokemontcgsdk>=3.4.0",
    "pre-commit>=4.5.1",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "sqlmodel>=0.0.29",
    "tcgdex-sdk>=2.2.1",
]

[tool.ruff]
target-version = "py312" # Assume Python 3.12
line-length = 120
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.format]
quote-style = "double"            # use double quotes for strings.
indent-style = "space"            # indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # respect magic trailing commas.
line-ending = "auto"              # automatically detect the appropriate line ending.
